Details
Description
0.4.8-dev-1076-gb97886e
two different dialogs to open file / select folder:
FileOpenDlgProc95() which is easy to access via TileWorld setup from rapps
SHBrowseForFolder() which is easy to access via rapps properties dlg.
Both offer "delete" and "rename" as actions in context menu and both do work.
But both do lack the related keyboard shortcuts.
Expected result:
- keybord shutcut F2 shall invoke "rename"
- keyboard shortcut Del shall invoke "Delete"
Attachments
Issue Links
- is duplicated by
-
CORE-7592 shell32: 'Browse for Folder' dialog fails to create new folders
-
- Resolved
-
- relates to
-
CORE-17340 SHBrowseForFolder() should refresh the view by pressing F5
-
- Resolved
-
-
CORE-12323 Improve the system usability by the keyboard EPIC
-
- Untriaged
-