[0.4.14][COMDLG32][SHELL32] Support accelerator keys F2/del CORE-14332

For FileOpenDlgProc95() & SHBrowseForFolder().
I decided to port those 2 commits back to have CORE-14332
fixed as a whole and not only a part of it.
*If* I would ever decide to port that back even further I should
remember that I will have to pick additionally 0.4.14-dev-1187-g
fc4c4d4911bfcec348f58b9e59c4f215ed6f58c5

-------------------------------------------------------------
[COMDLG32] Support shortcut keys on Open/Save Dialog (#3238)

Enable key accelerators on File Open/Save Dialog. CORE-14332
cherry picked from commit 0.4.15-dev-1050-g
c8e1460ac57e7862ccef0b5602764b6d72167a70
--------------------------------------------------------------
[SHELL32] Implement VK_DELETE on SHBrowseForFolder (#2661)

Enable Del/Delete key to delete the selected folder in "Browse for Folder" dialog.
You can use https://jira.reactos.org/secure/attachment/40118/getfolder.zip as a test program.
CORE-7592
cherry picked from commit 0.4.15-dev-39-g
771457f37f0673c8fa1f6e11268b7b5885780813